# observation-portal

./: .coveragerc  .dockerignore  .envrc  .eslintrc.js  .gitignore  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Jenkinsfile  README.md  develop.sh  devenv.nix  docker-compose.yaml  docker_push  flake.nix  local-cluster.yaml  local-registry.yaml  manage.py  nginx.conf  package-lock.json  package.json  poetry.toml  pyproject.toml  requirements.txt  setup.py  skaffold.yaml  test_settings.py  vue.config.js  webpack.config.js
.github/: dependabot.yml
.github/workflows/: build.yaml  docs-gh-pages.yaml  publish-docker-image.yaml  publish-docker.yaml  run-tests.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
docs/: conf.py  index.rst  requirements.txt
docs/source/: contributing.rst  documentation.rst  installation.rst  introduction.rst
docs/source/modules/: common.rst  observations.rst
k8s/base/: Corefile  deploy-api.yaml  deploy-dramatiq-scheduler.yaml  deploy-dramatiq-worker.yaml  deploy-static.yaml  kustomization.yaml  nginx-default.conf.template  svc-api.yaml  svc-static.yaml
k8s/base/api/: deploy-api.yaml  kustomization.yaml  nginx-default.conf.template
k8s/envs/local/: kustomization.yaml  settings.env
k8s/envs/local-deps/: kustomization.yaml  ns.yaml
nginx-mod-zip/: .dockerignore  Dockerfile  README.md
nginx-mod-zip/mod_zip/: source
observation_portal/: celery.py  config.py  settings.py  task_scheduler.py  test_runner.py  test_settings.py  urls.py  wsgi.py
observation_portal/accounts/: admin.py  apps.py  backends.py  forms.py  models.py  permissions.py  serializers.py  tasks.py  test_utils.py  test_views.py  tests.py  throttling.py  urls.py  views.py
observation_portal/accounts/migrations/: 0001_initial.py  0002_profile_terms_accepted.py  0003_bulk_create_users_api.py  0003_profile_password_expiration.py
observation_portal/accounts/oauth2_migrations/: 0001_initial.py  0002_auto_20210715_0630.py  0003_alter_accesstoken_user_alter_application_user_and_more.py  0004_application_allowed_origins_and_more.py
observation_portal/accounts/signals/: handlers.py
observation_portal/blocks/: apps.py  conversion.py  filters.py  serializers.py  urls.py  viewsets.py
observation_portal/common/: admin.py  configdb.py  doc_examples.py  downtimedb.py  middleware.py  mixins.py  rise_set_utils.py  schema.py  state_changes.py  telescope_states.py  test_configdb.py  test_helpers.py  test_state_changes.py  test_telescope_states.py  utils.py
observation_portal/observations/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  realtime.py  serializers.py  state_changes.py  tasks.py  tests.py  time_accounting.py  urls.py  views.py  viewsets.py
observation_portal/proposals/: __init__.py  accounting.py  admin.py  apps.py  filters.py  forms.py  models.py  notifications.py  serializers.py  tasks.py  test_api.py  test_views.py  tests.py  urls.py  views.py  viewsets.py
observation_portal/requestgroups/: __init__.py  admin.py  apps.py  cadence.py  contention.py  dither.py  duration_utils.py  filters.py  forms.py  models.py  pattern_expansion.py  request_utils.py  schema_serializers.py  serializers.py  state_changes.py  target_helpers.py  tasks.py  urls.py  views.py  viewsets.py
observation_portal/requests/: apps.py
observation_portal/sciapplications/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  signals.py  test_admin.py  test_api.py  test_views.py  tests.py  urls.py  views.py  viewsets.py
observation_portal/userrequests/: apps.py  conversion.py  filters.py  urls.py  viewsets.py
static/css/: fluid_page.css  main.css  plot_style.css  print.css  requestgroup_list.css  sciapplications.css
static/js/: archive.js  compose.js  compose.vue  global.js  request_detail.js  request_detail.vue  request_row.js  requestgroup_detail.js  requestgroup_header.js  telescope_availability_chart.js  telescope_availability_chart.vue  tools.js  tools.vue  userrequest_detail.js  userrequest_header.js  utils.js
templates/: 404.html  base.html  help.html  index.html  tools.html
templates/admin/: generic_form.html
templates/registration/: activation_email.html  login.html  registration_form.html
(+211 files in other folders)
