[tool.poetry]
name = "django-ocs-observation-portal"
version = "3.6.10"
description = "The Observatory Control System (OCS) Observation Portal django apps"
license = "GPL-3.0-only"
authors = ["Observatory Control System Project <ocs@lco.global>"]
readme = "README.md"
homepage = "https://observatorycontrolsystem.github.io"
repository = "https://github.com/observatorycontrolsystem/observation-portal"
keywords = [
    "observations",
    "astronomy",
    "astrophysics",
    "cosmology",
    "science",
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
packages = [
    { include = "observation_portal" }
]

[tool.poetry.scripts]
django-manage = "manage:main"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = ">=3.7,<3.8"
boto3 = "<2.0"
cerberus = ">1.0,<2.0"
django = ">=3.2,<3.3"
djangorestframework = ">=3.12,<3.13"
django-bootstrap4 = "<4.0"
django-cors-headers = ">=3.0,<3.8"
django-dramatiq = ">=0.10,<0.11"
django-extensions = ">=3.1,<3.2"
django-filter = ">=2.1,<2.5"
django-oauth-toolkit = ">=1.2,<1.6"
django-redis-cache = "<3.1"
django-registration-redux = ">=2.6,<3.0"
django-storages = ">=1.11,<1.12"
dramatiq = { version = ">=1.11,<1.12", extras = [ "redis", "watch" ] }
drf-yasg = ">=1.20,<1.21"
elasticsearch = ">=5,<6"
gunicorn = { version = ">=19,<21", extras = [ "gevent" ] }
lcogt-logging = "0.3.2"
numpy = "^1.16"
ocs-rise-set = "0.5.1"
psycopg2-binary = ">=2.8,<2.10"
PyPDF2 = ">=1.26,<1.27"
redis = "3.5.3"
requests = ">=2.22,<2.27"
time_intervals = "<2.0"
uritemplate = "3.0.1"

[tool.poetry.dev-dependencies]
responses = "0.10.6"
mixer = "6.1.3"
Faker = "0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
